Z-index fix for Promotion Flyout

--- a/main.css
+++ b/main.css
@@ -8155,6 +8155,7 @@ footer p {
     color: #fff;
     text-align: center;
     padding: 15px;
+    z-index: 10;
 }
 
 .promotion-flyout div {
